# xss-sdl2-gles2

./: .gitignore  CMakeLists.txt  MILESTONES.md  README.md
.github/workflows/: ci.yml
cmake/: batch2-glhacks.cmake
docs/: EMSCRIPTEN.md  sdl_framebuffer_reference.c  testpattern.ppm
scripts/: bin2c.py  deploy-web.sh  gen_gallery.py  gen_glhack_deps.py
src/driver/: xss_driver.c  xss_driver.h
src/hacks/: testpattern.c
src/port/: config.h  glx-sdl.c  grabclient-sdl.c  hack_main.c.in  jwxyz-arcs.c  jwxyz-font.c  jwxyz-png.c  jwxyz-sdl.c  jwxyz-sdl.h  screenhack-sdl.c  textclient-sdl.c
src/port/glshim/GL/: glu.h
src/port/glshim/GLES/: gl.h  glext.h
src/web/: shell.html
tests/: STATUS.csv  STATUS.md  harness.py  package-lock.json  package.json  smoke-web.sh  smoke.sh  verify-web.js
web/: index.html
